Fix sidebar overflow

--- a/src/UI/layouts/ComponentsLayout/ComponentsLayout.module.scss
+++ b/src/UI/layouts/ComponentsLayout/ComponentsLayout.module.scss
@@ -6,6 +6,7 @@
 }
 
 .sidebar {
+  @include spacing(padding, 80, 'bottom');
   display: flex;
   flex-direction: column;
   width: 15%;
